tests/transpiler/x/ocaml/cross_join_filter.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let nums = [1; 2; 3] in
  let letters = ["A"; "B"] in
  let pairs = (List.concat (List.map (fun n -> (List.filter_map (fun l -> if ((n mod 2) == 0) then Some ([("n", n); ("l", l)]) else None) letters)) nums)) in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") ["--- Even pairs ---"]));
  (try List.iter (fun p ->
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "n" p)); (List.assoc "l" p)]));
    with Continue -> ()) pairs with Break -> ())
